fixed some html error

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <link rel="manifest" href="site.webmanifest">
         
         <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"> -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer">
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="./GAMES/viewStyle.css">
         <!-- <link rel="stylesheet" href="/review-and-demo.css"> -->
@@ -103,129 +103,129 @@
                 <li><a href="./GAMES/25Aseda.html">ASEDA <sup>25</sup></a></li>
             </ul>
             <div class="navigation">
-                <a class="anchor dailyResult" href="./GAMES/dailyResult.html"  id="dailyResult"></i>Check Day Result</a>
+                <a class="anchor dailyResult" href="./GAMES/dailyResult.html"  id="dailyResult">Check Day Result</a>
                 <a class="anchor counterpart" href="/classification.html" target="_blank" id="counterpart">Classification Chart</a>                 
                     <a class="anchor " href="support.html#accountNumber" style="background-color: green;">Support Our New Development</a>
             </div>
         </nav>
     </header>
 
-    </div>
-        <div class="review-box" style="display: flex; flex-direction: column; justify-content: center; align-items: center; border: 1px solid #00000015; min-width: 310px; border-radius: 5px; margin: 10px; padding: 20px 0; background-color: aliceblue;">
-            <aside class="review" style="text-align: center; line-height: 1.5;" >
-                <h2>Review</h2>
-                <p style="font-size: 18px;">Kindly take few seconds of your time to rate our content</p>
-                <a class="google-review-link" href="https://g.page/r/CcKUCr5g5b_JEBI/review" target="_blank" style="color: #ff0000b5; font-size: 22px;" >Click here to Review  <i class="fa-solid fa-star-half-stroke"></i></a>
-            </aside>
-        </div>
-
-        <div style="text-align: center;">
-            <h3>Catch Our Prediction on Social Media</h3>
-            <p>Follow us to get our games</p>
-            <a style="margin: 20px;" href="https://web.facebook.com/visuaLottoBoard" target="_blank">facebook</a>
-            <a style="margin: 20px;" href="https://x.com/visuaLottoBoard" target="_blank">twitter</a>
-            <!-- <a href="">instagram</a> -->
-            <!-- <a href="https://www.betway.com.ng/lobby/casino/?btag=P105967-PR37554-CM105651-TS2032251&"; target="_blank" rel="nofollow"><img src="https://secure.betwaypartnersafrica.com/imagehandler/3721e926-4f21-4638-8eb8-19b1766229f7/" border="0"  alt="" /></a> -->
-        </div>
-
-        <aside class="info">
-            Last updated: May 16, 2025
-            <i class="fa-solid fa-circle-info" style="color: green;"></i>
+    
+    <div class="review-box" style="display: flex; flex-direction: column; justify-content: center; align-items: center; border: 1px solid #00000015; min-width: 310px; border-radius: 5px; margin: 10px; padding: 20px 0; background-color: aliceblue;">
+        <aside class="review" style="text-align: center; line-height: 1.5;" >
+            <h2>Review</h2>
+            <p style="font-size: 18px;">Kindly take few seconds of your time to rate our content</p>
+            <a class="google-review-link" href="https://g.page/r/CcKUCr5g5b_JEBI/review" target="_blank" style="color: #ff0000b5; font-size: 22px;" >Click here to Review  <i class="fa-solid fa-star-half-stroke"></i></a>
         </aside>
-                <!-- main -->
-        <main>
-            <div class="btn-container">
-                <div class="page-ort-wrapper">
-                    <h4>Page Orientation</h4>
-                    <button type="button" class="pageOrt-btn" id="pageOrt">Click to Change</button>
+    </div>
+
+    <div style="text-align: center;">
+        <h3>Catch Our Prediction on Social Media</h3>
+        <p>Follow us to get our games</p>
+        <a style="margin: 20px;" href="https://web.facebook.com/visuaLottoBoard" target="_blank">facebook</a>
+        <a style="margin: 20px;" href="https://x.com/visuaLottoBoard" target="_blank">twitter</a>
+        <!-- <a href="">instagram</a> -->
+        <!-- <a href="https://www.betway.com.ng/lobby/casino/?btag=P105967-PR37554-CM105651-TS2032251&"; target="_blank" rel="nofollow"><img src="https://secure.betwaypartnersafrica.com/imagehandler/3721e926-4f21-4638-8eb8-19b1766229f7/" border="0"  alt="" /></a> -->
+    </div>
+
+    <aside class="info">
+        Last updated: May 16, 2025
+        <i class="fa-solid fa-circle-info" style="color: green;"></i>
+    </aside>
+            <!-- main -->
+    <main>
+        <div class="btn-container">
+            <div class="page-ort-wrapper">
+                <h4>Page Orientation</h4>
+                <button type="button" class="pageOrt-btn" id="pageOrt">Click to Change</button>
+            </div>
+        </div>
+
+                    <!-- all games-->
+        <section>
+            <div class="iframe-container" id="iframeContainer">
+                <div class="frame" id="frame" tabindex="0"> 
+                    <iframe title="Royal results board" scrolling="no" src="./GAMES/1Diamond.html" tabindex="-1"></iframe>
+                </div> 
+                <div class="frame" tabindex="0"> 
+                    <iframe title="Mark-2 results board" scrolling="no" src="./GAMES/2People.html" tabindex="-1"></iframe>
+                </div> 
+                <div class="frame" tabindex="0"> 
+                    <iframe title="Enugu results board" scrolling="no" src="./GAMES/3Bingo.html" tabindex="-1"></iframe>
+                </div>
+                <div class="frame" tabindex="0"> 
+                    <iframe title="premier lucky results board" scrolling="no" src="./GAMES/4Metro.html" tabindex="-1"></iframe>
+                </div>
+                <div class="frame" tabindex="0">
+                    <iframe title="Tota results board" scrolling="no" src="./GAMES/5Inter.html" tabindex="-1"></iframe>
+                </div>
+                <div class="frame" tabindex="0">
+                    <iframe title="Diamond results board" scrolling="no" src="./GAMES/6Gold.html" tabindex="-1"></iframe>
+                </div>
+                <div class="frame" tabindex="0">
+                    <iframe title="People results board" scrolling="no" src="./GAMES/7O6.html" tabindex="-1"></iframe>
+                </div>
+                <div class="frame"  tabindex="0">
+                    <iframe title="Bingo results board" scrolling="no" src="./GAMES/8Jackpot.html" tabindex="-1"></iframe>
+                </div>
+                <div  class="frame" tabindex="0">
+                    <iframe title="Metro results board" scrolling="no" src="./GAMES/9Club-m.html" tabindex="-1"></iframe>
+                </div>
+                <div class="frame" tabindex="0">
+                    <iframe title="International results board" scrolling="no" src="./GAMES/10Super.html" tabindex="-1"></iframe>
+                </div>
+                <div  class="frame" tabindex="0">
+                    <iframe title="premier Gold results board" scrolling="no" src="./GAMES/11Tota.html" tabindex="-1"></iframe>
+                </div>
+                <div class="frame" tabindex="0">
+                    <iframe title="o6 results board" scrolling="no" src="./GAMES/12Mark-II.html" tabindex="-1"></iframe>
+                </div>
+                <div class="frame" tabindex="0">
+                    <iframe title="Jackpot results board" scrolling="no" src="./GAMES/13Vag.html" tabindex="-1"></iframe>
+                </div>
+                <div class="frame" tabindex="0">
+                    <iframe title="Club Master results board" scrolling="no" src="./GAMES/14Enugu.html" tabindex="-1"></iframe>
+                </div>
+                <div class="frame">
+                    <iframe title="Super results board" scrolling="no" src="./GAMES/15Lucky.html" tabindex="-1"></iframe>
+                </div>
+                <div class="frame">
+                    <iframe title="Vag results board" scrolling="no" src="./GAMES/16Fair-c.html" tabindex="-1"></iframe>
+                </div>
+                <div class="frame">
+                    <iframe title="Fair Chance results board" scrolling="no" src="./GAMES/17Royal.html" tabindex="-1"></iframe>
+                </div>
+                <div class="frame">
+                    <iframe title="Aseda results board" scrolling="no" src="./GAMES/18MSP.html"></iframe>
+                </div>
+                <div class="frame">
+                    <iframe title="Monday Special results board" scrolling="no" src="./GAMES/19LUCKY-G.html"></iframe>
+                </div>
+                <div class="frame">
+                    <iframe title="Ghana Lucky G results board" scrolling="no" src="./GAMES/20Midweek.html"></iframe> 
+                </div>
+                <div class="frame">
+                    <iframe title="Ghana Midweek results board" scrolling="no" src="./GAMES/21Fortune.html"></iframe>
+                </div>
+                <div class="frame">
+                    <iframe title="Ghana Fortune results board" scrolling="no" src="./GAMES/22Bonanza.html"></iframe>   
+                </div>
+                <div class="frame">
+                    <iframe title="friday Bonanza results board" scrolling="no" src="./GAMES/23King.html"></iframe> 
+                </div>
+                <div class="frame">
+                    <iframe title="premier King results board" scrolling="no" src="./GAMES/24National.html"></iframe> 
+                </div>
+                <div class="frame">
+                    <iframe title="Ghana National results board" scrolling="no" src="./GAMES/25Aseda.html"></iframe> 
                 </div>
             </div>
-
-                        <!-- all games-->
-            <section>
-                <div class="iframe-container" id="iframeContainer">
-                    <div class="frame" id="frame" tabindex="0"> 
-                        <iframe title="Royal results board" scrolling="no" src="./GAMES/1Diamond.html" tabindex="-1"></iframe>
-                    </div> 
-                    <div class="frame" tabindex="0"> 
-                        <iframe title="Mark-2 results board" scrolling="no" src="./GAMES/2People.html" tabindex="-1"></iframe>
-                    </div> 
-                    <div class="frame" tabindex="0"> 
-                        <iframe title="Enugu results board" scrolling="no" src="./GAMES/3Bingo.html" tabindex="-1"></iframe>
-                    </div>
-                    <div class="frame" tabindex="0"> 
-                        <iframe title="premier lucky results board" scrolling="no" src="./GAMES/4Metro.html" tabindex="-1"></iframe>
-                    </div>
-                    <div class="frame" class="frame" tabindex="0">
-                        <iframe title="Tota results board" scrolling="no" src="./GAMES/5Inter.html" tabindex="-1"></iframe>
-                    </div>
-                    <div class="frame" class="frame" tabindex="0">
-                        <iframe title="Diamond results board" scrolling="no" src="./GAMES/6Gold.html" tabindex="-1"></iframe>
-                    </div>
-                    <div class="frame" class="frame" tabindex="0">
-                        <iframe title="People results board" scrolling="no" src="./GAMES/7O6.html" tabindex="-1"></iframe>
-                    </div>
-                    <div class="frame" class="frame" tabindex="0">
-                        <iframe title="Bingo results board" scrolling="no" src="./GAMES/8Jackpot.html" tabindex="-1"></iframe>
-                    </div>
-                    <div class="frame" class="frame" tabindex="0">
-                        <iframe title="Metro results board" scrolling="no" src="./GAMES/9Club-m.html" tabindex="-1"></iframe>
-                    </div>
-                    <div class="frame" class="frame" tabindex="0">
-                        <iframe title="International results board" scrolling="no" src="./GAMES/10Super.html" tabindex="-1"></iframe>
-                    </div>
-                    <div class="frame" class="frame" tabindex="0">
-                        <iframe title="premier Gold results board" scrolling="no" src="./GAMES/11Tota.html" tabindex="-1"></iframe>
-                    </div>
-                    <div class="frame" class="frame" tabindex="0">
-                        <iframe title="o6 results board" scrolling="no" src="./GAMES/12Mark-II.html" tabindex="-1"></iframe>
-                    </div>
-                    <div class="frame" class="frame" tabindex="0">
-                        <iframe title="Jackpot results board" scrolling="no" src="./GAMES/13Vag.html" tabindex="-1"></iframe>
-                    </div>
-                    <div class="frame" class="frame" tabindex="0">
-                        <iframe title="Club Master results board" scrolling="no" src="./GAMES/14Enugu.html" tabindex="-1"></iframe>
-                    </div>
-                    <div class="frame">
-                        <iframe title="Super results board" scrolling="no" src="./GAMES/15Lucky.html" tabindex="-1"></iframe>
-                    </div>
-                    <div class="frame">
-                        <iframe title="Vag results board" scrolling="no" src="./GAMES/16Fair-c.html" tabindex="-1"></iframe>
-                    </div>
-                    <div class="frame">
-                        <iframe title="Fair Chance results board" scrolling="no" src="./GAMES/17Royal.html" tabindex="-1"></iframe>
-                    </div>
-                    <div class="frame">
-                        <iframe title="Aseda results board" scrolling="no" src="./GAMES/18MSP.html"></iframe>
-                    </div>
-                    <div class="frame">
-                        <iframe title="Monday Special results board" scrolling="no" src="./GAMES/19LUCKY-G.html"></iframe>
-                    </div>
-                    <div class="frame">
-                        <iframe title="Ghana Lucky G results board" scrolling="no" src="./GAMES/20Midweek.html"></iframe> 
-                    </div>
-                    <div class="frame">
-                        <iframe title="Ghana Midweek results board" scrolling="no" src="./GAMES/21Fortune.html"></iframe>
-                    </div>
-                    <div class="frame">
-                        <iframe title="Ghana Fortune results board" scrolling="no" src="./GAMES/22Bonanza.html"></iframe>   
-                    </div>
-                    <div class="frame">
-                        <iframe title="friday Bonanza results board" scrolling="no" src="./GAMES/23King.html"></iframe> 
-                    </div>
-                    <div class="frame">
-                        <iframe title="premier King results board" scrolling="no" src="./GAMES/24National.html"></iframe> 
-                    </div>
-                    <div class="frame">
-                        <iframe title="Ghana National results board" scrolling="no" src="./GAMES/25Aseda.html"></iframe> 
-                    </div>
-                </div>
-            </section>
-        </main>
+        </section>
+    </main>
 
                                  <!-- disclaimer-->
         <aside  class="disclaimer">
-            <h1><strong>Disclaimer</strong></h1> 
+            <h3><strong>Disclaimer</strong></h3>
             <p class="disclaim-message"> Hologuti Business Centre <b>(HBC)</b>'s <i>Visual Lotto Board (VLB)</i> is created for entertainment purposes only. 
             <b>HBC</b> is not connected to, or approved by any of the lottory organization, or any other body that related to any of the game used, 
             and does not endorse any lottery or gambling game, and also does not encourage anyone to gamble.
@@ -234,7 +234,7 @@
             It is not intended for use by minors, should not be used as a replacement for seeking professional financial advice.
             <br><br>
             By using the VLB, <b>HBC</b> is not responsible for any losses or damages incurred as a result. You agree to release <b>HBC</b> from any and all liability.
-            <br></br>
+            <br><br>
             <strong> Please, be responsible!!!</strong> 
             </p>
             <p class="respective-owner"><strong>copyright&copy; and trademark&trade; materials of external companies used here is for descriptive purpose only and belong to their respective owner</strong></p>
@@ -258,7 +258,7 @@
                     <p>Follow us on Social Media</p>
                     <div class="icon-wrapper">
                         <a href="https://twitter.com/visuaLottoBoard" target="_blank" class="icon"><i class="fa-brands fa-square-x-twitter"  aria-label="connect 0n our X Page "></i></a>
-                        <a href="https://www.facebook.com/visuaLottoBoard" target="_blank" class="icon"><i class="fa-brands fa-facebook"  aria-level="connect on our facebook Page"></i></a>
+                        <a href="https://www.facebook.com/visuaLottoBoard" target="_blank" class="icon"><i class="fa-brands fa-facebook"  aria-label="connect on our facebook Page"></i></a>
                         <a href="https://m.me/109930914660224" target="_blank" class="icon"><i class="fa-brands fa-facebook-messenger"  aria-label="connect on Messenger handle to Chat Us"></i></a>
                         <a href="http://www.youtube.com/@VisuaLottoBoard" target="_blank" class="icon"><i class="fa-brands fa-youtube"  aria-label="connect on our YouTube channel, watch live demo of how to navigate our platform"></i></a>
                     </div> 
