May 18th & 19th result

--- a/GAMES/20Midweek.html
+++ b/GAMES/20Midweek.html
@@ -1955,7 +1955,7 @@
                         <!-- day20-->
             <tbody>
                 <tr>
-                    <td class="serial-num">37</td>
+                    <td class="serial-num"></td>
                     <td class="days"><small></small></td>
                    
                     <!-- winning-->
