--- a/GAMES/25Aseda.html
+++ b/GAMES/25Aseda.html
@@ -1937,7 +1937,29 @@
                 </tr>
             </tbody>
 
-                        <!-- day17-->
+                        <!-- day19-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">17</td>
+                    <td class="days"><small>May 18th</small></td>
+                   
+                    <!-- winning-->
+                    <td class="winning">18</td>
+                    <td class="winning">15</td>
+                    <td class="winning">69</td>
+                    <td class="winning">1</td>
+                    <td class="winning" id="lbw">22</td>
+    
+                    <!-- machine-->
+                    <td class="machine" id="fbm">51</td>
+                    <td class="machine">10</td>
+                    <td class="machine">26</td>
+                    <td class="machine">21</td>
+                    <td class="machine" id="lbm">64</td>
+                </tr>
+            </tbody>
+
+                          <!-- day20-->
             <tbody>
                 <tr>
                     <td class="serial-num"></td>
