May 22nd result

--- a/GAMES/21Fortune.html
+++ b/GAMES/21Fortune.html
@@ -1951,7 +1951,29 @@
                 </tr>
             </tbody>
 
-                         <!-- day200-->
+                         <!-- day20-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">20</td>
+                    <td class="days"><small>May 22nd</small></td>
+                   
+                    <!-- winning-->
+                    <td class="winning">34</td>
+                    <td class="winning">79</td>
+                    <td class="winning">74</td>
+                    <td class="winning">51</td>
+                    <td class="winning" id="lbw">6</td>
+    
+                    <!-- machine-->
+                    <td class="machine" id="fbm">50</td>
+                    <td class="machine">46</td>
+                    <td class="machine">62</td>
+                    <td class="machine">2</td>
+                    <td class="machine" id="lbm">9</td>
+                </tr>
+            </tbody>
+
+                          <!-- day21-->
             <tbody>
                 <tr>
                     <td class="serial-num"></td>
