--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     </div>
 
     <aside class="info">
-        Last updated: May 21st, 2025
+        Last updated: May 22nd, 2025
         <i class="fa-solid fa-circle-info" style="color: green;"></i>
     </aside>
             <!-- main -->
