--- a/GAMES/20Midweek.html
+++ b/GAMES/20Midweek.html
@@ -1966,11 +1966,11 @@
                     <td class="winning" id="lbw">31</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">48</td>
+                    <td class="machine">46</td>
+                    <td class="machine">30</td>
+                    <td class="machine">43</td>
+                    <td class="machine" id="lbm">69</td>
                 </tr>
             </tbody>
 
