May 24th result

--- a/index.html
+++ b/index.html
@@ -105,7 +105,6 @@
             <div class="navigation">
                 <a class="anchor dailyResult" href="./GAMES/dailyResult.html"  id="dailyResult">Check Day Result</a>
                 <a class="anchor counterpart" href="/classification.html" target="_blank" id="counterpart">Classification Chart</a>                 
-                    <a class="anchor " href="support.html#accountNumber" style="background-color: green;">Support Our New Development</a>
             </div>
         </nav>
     </header>
@@ -129,7 +128,7 @@
     </div>
 
     <aside class="info">
-        Last updated: May 23rd, 2025
+        Last updated: May 24th, 2025
         <i class="fa-solid fa-circle-info" style="color: green;"></i>
     </aside>
             <!-- main -->
