--- a/GAMES/24National.html
+++ b/GAMES/24National.html
@@ -1944,7 +1944,29 @@
                 </tr>
             </tbody>
 
-                        <!-- day18-->
+                        <!-- day20-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">20</td>
+                    <td class="days"><small>May 24th</small></td>
+                   
+                    <!-- winning-->
+                    <td class="winning">74</td>
+                    <td class="winning">69</td>
+                    <td class="winning">14</td>
+                    <td class="winning">47</td>
+                    <td class="winning" id="lbw">18</td>
+    
+                    <!-- machine-->
+                    <td class="machine" id="fbm">24</td>
+                    <td class="machine">5</td>
+                    <td class="machine">35</td>
+                    <td class="machine">72</td>
+                    <td class="machine" id="lbm">63</td>
+                </tr>
+            </tbody>
+
+                           <!-- day21-->
             <tbody>
                 <tr>
                     <td class="serial-num"></td>
