May 27th, 28th and 29th results

--- a/GAMES/19LUCKY-G.html
+++ b/GAMES/19LUCKY-G.html
@@ -1986,11 +1986,11 @@
                     <td class="winning" id="lbw">16</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">42</td>
+                    <td class="machine">67</td>
+                    <td class="machine">17</td>
+                    <td class="machine">80</td>
+                    <td class="machine" id="lbm">5</td>
                 </tr>
             </tbody>
 
