--- a/GAMES/10Super.html
+++ b/GAMES/10Super.html
@@ -3909,23 +3909,23 @@
 
                            <!-- day43-->
             <tbody>
-                <tr>
+                <tr class="correction">
                     <td class="serial-num">43</td>
                     <td class="days"><small>Jun tues 3rd</small></td>
                    
                     <!-- winning-->
-                    <td class="winning">80</td>
-                    <td class="winning">53</td>
-                    <td class="winning">45</td>
-                    <td class="winning">66</td>
-                    <td class="winning" id="lbw">59</td>
+                    <td class="winning">40</td>
+                    <td class="winning">19</td>
+                    <td class="winning">67</td>
+                    <td class="winning">20</td>
+                    <td class="winning" id="lbw">88</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm">38</td>
-                    <td class="machine">69</td>
-                    <td class="machine">88</td>
-                    <td class="machine">64</td>
-                    <td class="machine" id="lbm">18</td>
+                    <td class="machine" id="fbm">13</td>
+                    <td class="machine">21</td>
+                    <td class="machine">37</td>
+                    <td class="machine">32</td>
+                    <td class="machine" id="lbm">06</td>
                 </tr>
             </tbody>
 
