June 4th & 5th result

--- a/GAMES/19LUCKY-G.html
+++ b/GAMES/19LUCKY-G.html
@@ -2008,11 +2008,11 @@
                     <td class="winning" id="lbw">51</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">49</td>
+                    <td class="machine">75</td>
+                    <td class="machine">30</td>
+                    <td class="machine">81</td>
+                    <td class="machine" id="lbm">56</td>
                 </tr>
             </tbody>
 
