--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     </div>
 
     <aside class="info">
-        Last updated: June 3rd, 2025
+        Last updated: June 5th, 2025
         <i class="fa-solid fa-circle-info" style="color: green;"></i>
     </aside>
             <!-- main -->
