June 7th and mps machine

--- a/GAMES/18MSP.html
+++ b/GAMES/18MSP.html
@@ -2001,11 +2001,11 @@
                     <td class="winning" id="lbw">54</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">64</td>
+                    <td class="machine">49</td>
+                    <td class="machine">65</td>
+                    <td class="machine">38</td>
+                    <td class="machine" id="lbm">45</td>
                 </tr>
             </tbody>
 
