--- a/GAMES/23King.html
+++ b/GAMES/23King.html
@@ -1989,7 +1989,29 @@
                 </tr>
             </tbody>
 
-                          <!-- day20-->
+                          <!-- day21-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">21</td>
+                    <td class="days"><small>Jun 7th</small></td>
+                   
+                    <!-- winning-->
+                    <td class="winning">19</td>
+                    <td class="winning">43</td>
+                    <td class="winning">24</td>
+                    <td class="winning">9</td>
+                    <td class="winning" id="lbw">10</td>
+    
+                    <!-- machine-->
+                    <td class="machine" id="fbm">76</td>
+                    <td class="machine">60</td>
+                    <td class="machine">34</td>
+                    <td class="machine">69</td>
+                    <td class="machine" id="lbm">54</td>
+                </tr>
+            </tbody>
+
+                           <!-- day22-->
             <tbody>
                 <tr>
                     <td class="serial-num"></td>
