June 8th & 9th results

--- a/GAMES/11Tota.html
+++ b/GAMES/11Tota.html
@@ -3953,22 +3953,22 @@
                             <!-- day44-->
             <tbody>
                 <tr>
-                    <td class="serial-num"></td>
-                    <td class="days"><small></small></td>
+                    <td class="serial-num">44</td>
+                    <td class="days"><small>Jun sun 8th</small></td>
                    
                     <!-- winning-->
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning" id="lbw"></td>
+                    <td class="winning">23</td>
+                    <td class="winning">41</td>
+                    <td class="winning">32</td>
+                    <td class="winning">17</td>
+                    <td class="winning" id="lbw">84</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">56</td>
+                    <td class="machine">89</td>
+                    <td class="machine">77</td>
+                    <td class="machine">6</td>
+                    <td class="machine" id="lbm">10</td>
                 </tr>
             </tbody>
         </table>
