--- a/GAMES/12Mark-II.html
+++ b/GAMES/12Mark-II.html
@@ -3950,7 +3950,29 @@
                 </tr>
             </tbody>
 
-                            <!-- day44-->
+                            <!-- day45-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">45</td>
+                    <td class="days"><small>Jun sun 8th</small></td>
+                   
+                    <!-- winning-->
+                    <td class="winning">83</td>
+                    <td class="winning">48</td>
+                    <td class="winning">18</td>
+                    <td class="winning">66</td>
+                    <td class="winning" id="lbw">71</td>
+    
+                    <!-- machine-->
+                    <td class="machine" id="fbm">11</td>
+                    <td class="machine">8</td>
+                    <td class="machine">10</td>
+                    <td class="machine">51</td>
+                    <td class="machine" id="lbm">41</td>
+                </tr>
+            </tbody>
+
+                            <!-- day46-->
             <tbody>
                 <tr>
                     <td class="serial-num"></td>
