Jun 13th and 14th results

--- a/GAMES/4Metro.html
+++ b/GAMES/4Metro.html
@@ -3974,7 +3974,29 @@
                 </tr>
             </tbody>
 
-                            <!-- day44-->
+                            <!-- day46-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">46</td>
+                    <td class="days"><small>Jun fri 13th</small></td>
+                   
+                    <!-- winning-->
+                    <td class="winning">55</td>
+                    <td class="winning">50</td>
+                    <td class="winning">37</td>
+                    <td class="winning">84</td>
+                    <td class="winning" id="lbw">47</td>
+    
+                    <!-- machine-->
+                    <td class="machine" id="fbm">77</td>
+                    <td class="machine">75</td>
+                    <td class="machine">69</td>
+                    <td class="machine">83</td>
+                    <td class="machine" id="lbm">45</td>
+                </tr>
+            </tbody>
+
+                             <!-- day47-->
             <tbody>
                 <tr>
                     <td class="serial-num"></td>
