--- a/GAMES/9Club-m.html
+++ b/GAMES/9Club-m.html
@@ -3977,22 +3977,22 @@
                          <!-- day46-->
             <tbody>
                 <tr>
-                    <td class="serial-num"></td>
-                    <td class="days"><small></small></td>
+                    <td class="serial-num">46</td>
+                    <td class="days"><small>Jun sat 13th</small></td>
                    
                     <!-- winning-->
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning" id="lbw"></td>
+                    <td class="winning">15</td>
+                    <td class="winning">81</td>
+                    <td class="winning">84</td>
+                    <td class="winning">42</td>
+                    <td class="winning" id="lbw">32</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">55</td>
+                    <td class="machine">49</td>
+                    <td class="machine">70</td>
+                    <td class="machine">37</td>
+                    <td class="machine" id="lbm">9</td>
                 </tr>
             </tbody>
         </table>
