--- a/GAMES/4Metro.html
+++ b/GAMES/4Metro.html
@@ -3999,22 +3999,22 @@
                              <!-- day47-->
             <tbody>
                 <tr>
-                    <td class="serial-num"></td>
-                    <td class="days"><small></small></td>
+                    <td class="serial-num">47</td>
+                    <td class="days"><small>Jun mon 16th</small></td>
                    
                     <!-- winning-->
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning" id="lbw"></td>
+                    <td class="winning">72</td>
+                    <td class="winning">10</td>
+                    <td class="winning">4</td>
+                    <td class="winning">23</td>
+                    <td class="winning" id="lbw">30</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">7</td>
+                    <td class="machine">59</td>
+                    <td class="machine">44</td>
+                    <td class="machine">52</td>
+                    <td class="machine" id="lbm">83</td>
                 </tr>
             </tbody>
         </table>
