--- a/GAMES/15Lucky.html
+++ b/GAMES/15Lucky.html
@@ -4039,7 +4039,29 @@
                 </tr>
             </tbody>
 
-                              <!-- day47-->
+                              <!-- day48-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">48</td>
+                    <td class="days"><small>Jun sun 22nd</small></td>
+                   
+                    <!-- winning-->
+                    <td class="winning">62</td>
+                    <td class="winning">38</td>
+                    <td class="winning">24</td>
+                    <td class="winning">58</td>
+                    <td class="winning" id="lbw">39</td>
+    
+                    <!-- machine-->
+                    <td class="machine" id="fbm">81</td>
+                    <td class="machine">2</td>
+                    <td class="machine">31</td>
+                    <td class="machine">87</td>
+                    <td class="machine" id="lbm">72</td>
+                </tr>
+            </tbody>
+
+                          <!-- day49-->
             <tbody>
                 <tr>
                     <td class="serial-num"></td>
