--- a/GAMES/25Aseda.html
+++ b/GAMES/25Aseda.html
@@ -2050,22 +2050,22 @@
                               <!-- day24-->
             <tbody>
                 <tr>
-                    <td class="serial-num"></td>
-                    <td class="days"><small></small></td>
+                    <td class="serial-num">24</td>
+                    <td class="days"><small>Jun 22nd</small></td>
                    
                     <!-- winning-->
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning" id="lbw"></td>
+                    <td class="winning">74</td>
+                    <td class="winning">56</td>
+                    <td class="winning">67</td>
+                    <td class="winning">63</td>
+                    <td class="winning" id="lbw">81</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">32</td>
+                    <td class="machine">30</td>
+                    <td class="machine">55</td>
+                    <td class="machine">42</td>
+                    <td class="machine" id="lbm">38</td>
                 </tr>
             </tbody>
         </table>
