--- a/GAMES/19LUCKY-G.html
+++ b/GAMES/19LUCKY-G.html
@@ -2061,7 +2061,29 @@
                 </tr>
             </tbody>
 
-                              <!-- day47-->
+                              <!-- day25-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">25</td>
+                    <td class="days"><small>Jun 24th</small></td>
+                   
+                    <!-- winning-->
+                    <td class="winning">53</td>
+                    <td class="winning">79</td>
+                    <td class="winning">60</td>
+                    <td class="winning">3</td>
+                    <td class="winning" id="lbw">73</td>
+    
+                    <!-- machine-->
+                    <td class="machine" id="fbm">50</td>
+                    <td class="machine">52</td>
+                    <td class="machine">9</td>
+                    <td class="machine">37</td>
+                    <td class="machine" id="lbm">70</td>
+                </tr>
+            </tbody>
+
+                          <!-- day26-->
             <tbody>
                 <tr>
                     <td class="serial-num"></td>
