--- a/classification.html
+++ b/classification.html
@@ -13,6 +13,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Baba Ijebu lotto classification chart">
+    <meta http-equiv="refresh" content="0; url=https://lottoclassificationchart.visuallottoboard.com/" />
+
     <meta name="keywords" content="Baba Ijebu classification chart, Premier lotto classification chart, counterpart">
     <title>Lotto Classification Chart | Visual Lotto Board</title>
 
