--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             </ul>
             <div class="navigation">
                 <a class="anchor dailyResult" href="./GAMES/dailyResult.html"  id="dailyResult">Check Day Result</a>
-                <a class="anchor counterpart" href="/classification.html" target="_blank" id="counterpart">Classification Chart</a>                 
+                <a class="anchor counterpart" href="/classification/index.html" target="_blank" id="counterpart">Classification Chart</a>                 
             </div>
         </nav>
     </header>
