--- a/GAMES/7O6.html
+++ b/GAMES/7O6.html
@@ -21,7 +21,8 @@
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-54JWWN2R"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
-    
+                        <h1 style="font-size: 3.5rem; color: #fff; background-color: #2282c7;" id="visual-lotto-board">We are migrating this website to the new one</h1>
+
     <main>
         <table>
             <caption>06</caption>
