--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Visual Lotto Board | Baba Ijebu and Lotto result, yesterday and past results</title>
+        <title>Redirect to new Visual Lotto Board</title>
+        <meta http-equiv="refresh" content="0, url=https://premier-lotto-babaijebu-results.visuallottoboard.com">
         <meta name="description" content="Visual Lotto Board is a platform that provides information related to Premier Lotto (Baba Ijebu) and Ghana lottery results. You can find past and current results on your devices through this service">
 
         <meta property="og:title" content="Visual Lotto Board - Baba Ijebu and Lotto result, yesterday and past results">
@@ -270,7 +271,11 @@
             })();
         </script> -->
         <!--End of Tawk.to Script-->
-      
+        <script>
+                    window.location.replace("https://premier-lotto-babaijebu-results.visuallottoboard.com");
+
+        </script>
+
     </body>
 </html>
         
