--- a/GAMES/2People.html
+++ b/GAMES/2People.html
@@ -11,6 +11,8 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <meta http-equiv="refresh" content="0, url=https://premier-lotto-babaijebu-results.visuallottoboard.com/"> -->
+
     <title>Peoples Result | Baba Ijebu</title>
 
     <link rel="stylesheet" href="tableStyles.css">
