redirect single page

--- a/GAMES/6Gold.html
+++ b/GAMES/6Gold.html
@@ -12,6 +12,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gold Result | Baba Ijebu</title>
+    <meta http-equiv="refresh" content="0; url=https://premier-lotto-babaijebu-results.visuallottoboard.com/games/6gold">
+
 
     <link rel="stylesheet" href="tableStyles.css">
 
