redirect monday games

--- a/GAMES/18MSP.html
+++ b/GAMES/18MSP.html
@@ -13,6 +13,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Monday Special | Baba Ijebu</title>
 
+    <meta http-equiv="refresh" content="0; url=https://premier-lotto-babaijebu-results.visuallottoboard.com/games/18msp">
+
+
     <link rel="stylesheet" href="tableStyles.css">
 
 </head>
@@ -2100,5 +2103,9 @@
         </table>
         <span>MSP</span>
     </main>
+
+     <script>
+            window.location.replace("https://premier-lotto-babaijebu-results.visuallottoboard.com/games/18msp");
+    </script>
 </body>
 </html>
