--- a/GAMES/4Metro.html
+++ b/GAMES/4Metro.html
@@ -12,6 +12,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Metro Result | Baba Ijebu</title>
+    <meta http-equiv="refresh" content="0; url=https://premier-lotto-babaijebu-results.visuallottoboard.com/games/4metro">
+
 
     <link rel="stylesheet" href="tableStyles.css">
     
@@ -4112,5 +4114,9 @@
 
         <span>Metro</span>
     </main>
+
+      <script>
+            window.location.replace("https://premier-lotto-babaijebu-results.visuallottoboard.com/games/4metro");
+        </script>
 </body>
 </html>
