--- a/GAMES/5Inter.html
+++ b/GAMES/5Inter.html
@@ -12,6 +12,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>International Result | Baba Ijebu</title>
+    <meta http-equiv="refresh" content="0; url=https://premier-lotto-babaijebu-results.visuallottoboard.com/games/5inter">
+
 
     <link rel="stylesheet" href="tableStyles.css">
 
@@ -4112,5 +4114,9 @@
         </table>
         <span>International</span>
     </main>
+
+    <script>
+            window.location.replace("https://premier-lotto-babaijebu-results.visuallottoboard.com/games/5inter");
+        </script>
 </body>
 </html>
