--- a/GAMES/1Diamond.html
+++ b/GAMES/1Diamond.html
@@ -12,6 +12,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Diamond Result | Baba Ijebu</title>
+    <meta http-equiv="refresh" content="0; url=https://premier-lotto-babaijebu-results.visuallottoboard.com/games/1diamond">
+
 
     <link rel="stylesheet" href="tableStyles.css">
 
@@ -4109,5 +4111,9 @@
         </table>
         <span>Diamond</span>
     </main>
+
+      <script>
+            window.location.replace("https://premier-lotto-babaijebu-results.visuallottoboard.com/games/1diamond");
+        </script>
 </body>
 </html>
