--- a/GAMES/3Bingo.html
+++ b/GAMES/3Bingo.html
@@ -12,6 +12,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bingo Result | Baba Ijebu</title>
+    <meta http-equiv="refresh" content="0; url=https://premier-lotto-babaijebu-results.visuallottoboard.com/games/3bingo">
+
 
     <link rel="stylesheet" href="tableStyles.css">
 
@@ -4110,5 +4112,10 @@
         </table>
         <span>Bingo</span>
     </main>
+
+    
+        <script>
+            window.location.replace("https://premier-lotto-babaijebu-results.visuallottoboard.com/games/3bingo");
+        </script>
 </body>
 </html>
