--- a/GAMES/8Jackpot.html
+++ b/GAMES/8Jackpot.html
@@ -13,6 +13,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jackpot Result | Baba Ijebu</title>
 
+        <meta http-equiv="refresh" content="0; url=https://premier-lotto-babaijebu-results.visuallottoboard.com/games/8jackpot">
+
+
     <link rel="stylesheet" href="tableStyles.css">
     <link rel="stylesheet" media="print" href="/GAMES/paper-size.css" />
 
@@ -4115,5 +4118,8 @@
         </table>
         <span>Jackpot</span>
     </main>
+     <script>
+            window.location.replace("https://premier-lotto-babaijebu-results.visuallottoboard.com/games/8jackpot");
+        </script>
 </body>
 </html>
