--- a/GAMES/9Club-m.html
+++ b/GAMES/9Club-m.html
@@ -13,6 +13,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Club Master Result | Baba Ijebu</title>
 
+        <meta http-equiv="refresh" content="0; url=https://premier-lotto-babaijebu-results.visuallottoboard.com/games/9clubmaster">
+
+
     <link rel="stylesheet" href="tableStyles.css">
 
    
@@ -4109,5 +4112,9 @@
         </table>
         <span>Club Master</span>
     </main>
+
+     <script>
+            window.location.replace("https://premier-lotto-babaijebu-results.visuallottoboard.com/games/9clubmaster");
+        </script>
 </body>
 </html>
