--- a/GAMES/18MSP.html
+++ b/GAMES/18MSP.html
@@ -2105,7 +2105,7 @@
     </main>
 
      <script>
-            // window.location.replace("https://premier-lotto-babaijebu-results.visuallottoboard.com/games/18msp");
+            window.location.replace("https://premier-lotto-babaijebu-results.visuallottoboard.com/games/18msp");
     </script>
 </body>
 </html>
