--- a/GAMES/7O6.html
+++ b/GAMES/7O6.html
@@ -13,6 +13,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>O6 Result | Baba Ijebu</title>
 
+    <meta http-equiv="refresh" content="0; url=https://premier-lotto-babaijebu-results.visuallottoboard.com/games/7O6.html">
+
+
     <link rel="stylesheet" href="tableStyles.css">
 
 </head>
@@ -4111,5 +4114,9 @@
         </table>
         <span>06</span>
     </main> 
+
+     <script>
+            window.location.replace("https://premier-lotto-babaijebu-results.visuallottoboard.com/games/7O6.html");
+        </script>
 </body>
 </html>
